--- a/Sprint.Core/Sprint.Core.csproj
+++ b/Sprint.Core/Sprint.Core.csproj
@@ -75,9 +75,13 @@
     <Compile Include="Models\PostContentFile.cs" />
     <Compile Include="Modules\IModuleAttribute.cs" />
     <Compile Include="Modules\IModuleInfo.cs" />
+    <Compile Include="Modules\IModuleParameter.cs" />
+    <Compile Include="Modules\ModuleAttribute.cs" />
+    <Compile Include="Modules\ModuleParameter.cs" />
     <Compile Include="Modules\ModulePresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ContentFileRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Repositories\IReadOnlyRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\PageRepository.cs" />
